# borik

./: .air.toml  .bazelrc  .dockerignore  .editorconfig  .env.dist  .envrc  .gitattributes  .gitignore  .golangci.yaml  BUILD  BUILD.bazel  Dockerfile  LICENCE  MODULE.bazel  README.md  borik.go  compose.yml  docker-compose.yml  flake.nix  gik.go  go.mod  go.sum  main.go  mise.toml
.claude/: settings.local.json
.github/: zizmor.yml
.github/workflows/: docker-image.yml  validate.yaml
bot/: arcweld.go  bot.go  consul.go  deepfry.go  divine.go  fs.go  gmagik.go  graphics_formats.go  help.go  huecycle.go  image_fetch.go  imagik.go  invert.go  jack_pog.go  keenan_thumb.go  magik.go  malt.go  mitch_point.go  modulate.go  operations.go  otsu.go  pipelines.go  presidents_frame.go  resize.go  rotate.go  side_keenan.go  steve_point.go  transform.go  utilities.go  v7testing.go  waaw.go
cmd/: BUILD.bazel  root.go  run.go  runBot.go  runWorker.go  run_bot.go  run_worker.go
cmd/borik/: main.go
cmd/borik-worker/: main.go
docs/plans/: 2026-03-07-node-renderer-implementation.md  2026-03-07-node-renderer-sidecar-design.md
node-renderer/: .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
node-renderer/src/: renderer.ts  server.ts  test-render.ts
node-renderer/src/animations/: index.ts  inside-sphere.ts  low-poly-sphere.ts  pyramid.ts  rotating-sphere.ts  spin-360.ts  types.ts  utils.ts
patches/: imagick.patch
pkg/bot/: BUILD.bazel  ai_workflow.go  arcweld.go  bot.go  deepfry.go  frames.go  gif.go  graphics_formats.go  hdr.go  help.go  heritage.go  huecycle.go  image_fetch.go  image_gen.go  invert.go  jack_pog.go  jobs.go  keenan_thumb.go  magik.go  malt.go  meme.go  mitch_point.go  modulate.go  node_renderer.go  otsu.go  overlays.go  presidents_frame.go  renderer_client.go  resize.go  side_keenan.go  soriktest.go  steve_point.go  translate.go  utilities.go  waaw.go  workflow.go
pkg/config/: BUILD.bazel  config.go
pkg/jobs/activities/: ai.go  arcweld.go  deepfry.go  divine.go  frames.go  gif.go  graphics_formats.go  hdr.go  huecycle.go  image_utils.go  invert.go  load_image.go  magik.go  malt.go  meme.go  mirror.go  modulate.go  otsu.go  overlays.go  register.go  transform.go  types.go  utils.go
pkg/jobs/activities/profiles/: 2020_profile.icc
pkg/jobs/args/: ai.go  arcweld.go  deepfry.go  divine.go  frames.go  gif.go  graphics_formats.go  hdr.go  huecycle.go  invert.go  magik.go  malt.go  meme.go  mirror.go  modulate.go  otsu.go  overlays.go  transform.go  types.go
pkg/jobs/worker/: worker.go
pkg/jobs/workflows/: convert_video_to_gif.go  generate_image.go  process_image.go  register.go  test_workflow.go
pkg/jobs/workspace/: workspace.go
pkg/logging/: temporalShim.go
scripts/: install-imagemagick.sh
