module(name = "borik")

bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.45.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_bwmarrin_discordgo", "com_github_joho_godotenv", "com_github_kelseyhightower_envconfig", "com_github_nint8835_parsley", "com_github_rs_zerolog", "com_github_spf13_cobra", "in_gopkg_gographics_imagick_v3")
