module(
    name = "borik",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_cc", version = "0.2.14")

# ── Third-party C source archives ────────────────────────────────────────────
# SHA256 integrity values are omitted; downloads are pinned via MODULE.bazel.lock instead.

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "zlib_src",
    build_file = "//:third_party/zlib.BUILD",
    integrity = "sha256-mpOyt9/ax3zrpaVYpYDnRmfdb+3kWFuR7vtg8Dty3yM=",
    strip_prefix = "zlib-1.3.1",
    urls = ["https://github.com/madler/zlib/releases/download/v1.3.1/zlib-1.3.1.tar.gz"],
)

http_archive(
    name = "libjpeg_turbo_src",
    build_file = "//:third_party/libjpeg_turbo.BUILD",
    integrity = "sha256-mRMFWefWLo1pXywOru+RLFgo1bhKBTfcskyWeMnVt2s=",
    strip_prefix = "libjpeg-turbo-3.0.4",
    urls = ["https://github.com/libjpeg-turbo/libjpeg-turbo/releases/download/3.0.4/libjpeg-turbo-3.0.4.tar.gz"],
)

http_archive(
    name = "libpng_src",
    build_file = "//:third_party/libpng.BUILD",
    integrity = "sha256-DvW2M9DGX3gMT87Sf/gymY5xR4wTtF37bpTyOoL2T3w=",
    strip_prefix = "libpng-1.6.44",
    urls = ["https://github.com/pnggroup/libpng/archive/refs/tags/v1.6.44.tar.gz"],
)

http_archive(
    name = "giflib_src",
    build_file = "//:third_party/giflib.BUILD",
    integrity = "sha256-vn/70FfK3r4qoURUL9kMaDjGoIO16KkEi47jtmsp1fs=",
    strip_prefix = "giflib-5.2.2",
    urls = ["https://downloads.sourceforge.net/project/giflib/giflib-5.2.2.tar.gz"],
)

http_archive(
    name = "libwebp_src",
    build_file = "//:third_party/libwebp.BUILD",
    integrity = "sha256-Eq9QxFUw8KKS05qI2VJjfkP7LUqxiDxErnKYQPcnM4E=",
    strip_prefix = "libwebp-1.4.0",
    urls = ["https://github.com/webmproject/libwebp/archive/refs/tags/v1.4.0.tar.gz"],
)

http_archive(
    name = "freetype_src",
    build_file = "//:third_party/freetype.BUILD",
    integrity = "sha256-vFyJjkdW03Pg2ZG6sFMDbF6yqnwNXGfoZi3cbaQMQQM=",
    strip_prefix = "freetype-VER-2-13-3",
    urls = ["https://github.com/freetype/freetype/archive/refs/tags/VER-2-13-3.tar.gz"],
)

http_archive(
    name = "liblqr_src",
    build_file = "//:third_party/liblqr.BUILD",
    integrity = "sha256-EBmi2R85NfH4F+sgSlHsl3oGDTlwTG2voYOxEP1igLA=",
    strip_prefix = "liblqr-0.4.2",
    urls = ["https://github.com/carlobaldassi/liblqr/archive/refs/tags/v0.4.2.tar.gz"],
)

http_archive(
    name = "imagemagick_src",
    build_file = "//:third_party/imagemagick.BUILD",
    integrity = "sha256-sWQV6GlKLhXlKC1k/Hs1jzCf86UUqQ612iaGdsdy3j0=",
    strip_prefix = "ImageMagick-7.1.2-3",
    urls = ["https://github.com/ImageMagick/ImageMagick/archive/refs/tags/7.1.2-3.tar.gz"],
)

# ── Go dependencies ───────────────────────────────────────────────────────────
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Imagick needs a hand-crafted BUILD since its CGO deps are our built ImageMagick.
go_deps.module_override(
    patches = ["//:patches/imagick.patch"],
    path = "gopkg.in/gographics/imagick.v3",
)
go_deps.gazelle_override(
    build_file_generation = "off",
    path = "gopkg.in/gographics/imagick.v3",
)

# All Go deps populated by `bazel mod tidy`
use_repo(go_deps, "com_github_bwmarrin_discordgo", "com_github_joho_godotenv", "com_github_kelseyhightower_envconfig", "com_github_nint8835_parsley", "com_github_openai_openai_go_v3", "com_github_rs_zerolog", "com_github_spf13_cobra", "in_gopkg_gographics_imagick_v3")
