module(
    name = "borik",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_cc", version = "0.2.17")

# ── Third-party C source archives ────────────────────────────────────────────
# SHA256 integrity values are omitted; downloads are pinned via MODULE.bazel.lock instead.

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "freetype", version = "2.14.1")
bazel_dep(name = "giflib", version = "5.2.1.bcr.1")
bazel_dep(name = "glib", version = "2.82.2.bcr.8")
bazel_dep(name = "libpng", version = "1.6.54")
bazel_dep(name = "zlib", version = "1.3.2")

# We need to build libwebp ourselves since BCR's packaged version does not include any of the auxiliary libraries (sharpyuv, webpmux, demux) that we need to link against.
http_archive(
    name = "libwebp",
    build_file = "//:third_party/libwebp.BUILD",
    integrity = "sha256-Eq9QxFUw8KKS05qI2VJjfkP7LUqxiDxErnKYQPcnM4E=",
    strip_prefix = "libwebp-1.4.0",
    urls = ["https://github.com/webmproject/libwebp/archive/refs/tags/v1.4.0.tar.gz"],
)

# Compiling libjpeg_turbo from source because the BCR version is causing weird SIMD errors when linking with ImageMagick
# TODO: Is this a me issue?
http_archive(
    name = "libjpeg_turbo",
    build_file = "//:third_party/libjpeg_turbo.BUILD",
    integrity = "sha256-mRMFWefWLo1pXywOru+RLFgo1bhKBTfcskyWeMnVt2s=",
    strip_prefix = "libjpeg-turbo-3.0.4",
    urls = ["https://github.com/libjpeg-turbo/libjpeg-turbo/releases/download/3.0.4/libjpeg-turbo-3.0.4.tar.gz"],
)

http_archive(
    name = "liblqr_src",
    build_file = "//:third_party/liblqr.BUILD",
    integrity = "sha256-EBmi2R85NfH4F+sgSlHsl3oGDTlwTG2voYOxEP1igLA=",
    strip_prefix = "liblqr-0.4.2",
    urls = ["https://github.com/carlobaldassi/liblqr/archive/refs/tags/v0.4.2.tar.gz"],
)

http_archive(
    name = "imagemagick_src",
    build_file = "//:third_party/imagemagick.BUILD",
    integrity = "sha256-sWQV6GlKLhXlKC1k/Hs1jzCf86UUqQ612iaGdsdy3j0=",
    strip_prefix = "ImageMagick-7.1.2-3",
    urls = ["https://github.com/ImageMagick/ImageMagick/archive/refs/tags/7.1.2-3.tar.gz"],
)

# ── Go dependencies ───────────────────────────────────────────────────────────
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Imagick needs a hand-crafted BUILD since its CGO deps are our built ImageMagick.
go_deps.module_override(
    patches = ["//:patches/imagick.patch"],
    path = "gopkg.in/gographics/imagick.v3",
)
go_deps.gazelle_override(
    build_file_generation = "off",
    path = "gopkg.in/gographics/imagick.v3",
)

# All Go deps populated by `bazel mod tidy`
use_repo(go_deps, "com_github_bwmarrin_discordgo", "com_github_joho_godotenv", "com_github_kelseyhightower_envconfig", "com_github_nint8835_parsley", "com_github_openai_openai_go_v3", "com_github_rs_zerolog", "com_github_spf13_cobra", "in_gopkg_gographics_imagick_v3", "so_nit_pkg_switchboard")
