load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "bot",
    srcs = [
        "arcweld.go",
        "bot.go",
        "deepfry.go",
        "divine.go",
        "gmagik.go",
        "graphics_formats.go",
        "help.go",
        "huecycle.go",
        "image_fetch.go",
        "invert.go",
        "magik.go",
        "malt.go",
        "modulate.go",
        "otsu.go",
        "overlays.go",
        "presidents_frame.go",
        "resize.go",
        "rotate.go",
        "utilities.go",
        "waaw.go",
    ],
    embedsrcs = [
        "divine.png",
        "overlay_images/andrew_pog.png",
        "overlay_images/denny_standing.png",
        "overlay_images/jack_pog.png",
        "overlay_images/keenan_thumb.png",
        "overlay_images/mitch_point.png",
        "overlay_images/natalie_climb.png",
        "overlay_images/side_keenan.png",
        "overlay_images/steve_point.png",
        "overlay_images/trans_matlab_kid.png",
        "presidents_frame.png",
    ],
    importpath = "github.com/fogo-sh/borik/pkg/bot",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "@com_github_bwmarrin_discordgo//:discordgo",
        "@com_github_nint8835_parsley//:parsley",
        "@com_github_rs_zerolog//log",
        "@in_gopkg_gographics_imagick_v3//imagick",
    ],
)
