load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "bot",
    srcs = [
        "arcweld.go",
        "bot.go",
        "deepfry.go",
        "divine.go",
        "frames.go",
        "gmagik.go",
        "graphics_formats.go",
        "help.go",
        "huecycle.go",
        "image_fetch.go",
        "image_gen.go",
        "invert.go",
        "magik.go",
        "malt.go",
        "meme.go",
        "modulate.go",
        "otsu.go",
        "overlays.go",
        "resize.go",
        "rotate.go",
        "utilities.go",
        "waaw.go",
    ],
    embedsrcs = [
        "divine.png",
        "fonts/anton.ttf",
        "images/frames/heritage.png",
        "images/frames/presidents_frame.png",
        "images/frames/shinji_throw.png",
        "images/overlays/andrew_pog.png",
        "images/overlays/denny_standing.png",
        "images/overlays/jack_pog.png",
        "images/overlays/keenan_thumb.png",
        "images/overlays/mitch_point.png",
        "images/overlays/natalie_climb.png",
        "images/overlays/side_keenan.png",
        "images/overlays/steve_point.png",
        "images/overlays/trans_matlab_kid.png",
    ],
    importpath = "github.com/fogo-sh/borik/pkg/bot",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "@com_github_bwmarrin_discordgo//:discordgo",
        "@com_github_nint8835_parsley//:parsley",
        "@com_github_openai_openai_go_v3//:openai-go",
        "@com_github_openai_openai_go_v3//option",
        "@com_github_rs_zerolog//log",
        "@in_gopkg_gographics_imagick_v3//imagick",
        "@so_nit_pkg_switchboard//:switchboard",
    ],
)
