load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/fogo-sh/borik/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_joho_godotenv//:godotenv",
        "@com_github_kelseyhightower_envconfig//:envconfig",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
    ],
)
